括弧の大きさが不自然な部分を修正

--- a/nu-sci-H31-1-1.tex
+++ b/nu-sci-H31-1-1.tex
@@ -19,7 +19,7 @@
      &= \frac{1}{2} \left[\log(1+\sin\theta) - \log(1-\sin\theta)\right]^{\frac{\pi}{3}}_{0} \\
      &= \frac{1}{2} \left\{ \log\left(1+\frac{\sqrt{3}}{2}\right) - \log\left(1-\frac{\sqrt{3}}{2}\right)\right\} \\
      &= \frac{1}{2} \log\left(\frac{1+\frac{\sqrt{3}}{2}}{1-\frac{\sqrt{3}}{2}}\right) \\
-     &= \frac{1}{2} \log(\frac{2+\sqrt{3}}{2-\sqrt{3}}) \\
+     &= \frac{1}{2} \log\left(\frac{2+\sqrt{3}}{2-\sqrt{3}}\right) \\
      &= \frac{1}{2} \log(2+\sqrt{3})^2 \\
      &= \log(2+\sqrt{3}) \\
 \end{align*}
